# Neural-Nertwork-project

./: .gitignore  README.md
nn/: finetune_log.csv  pyproject.toml  test.ipynb
nn/.ipynb_checkpoints/: Test-checkpoint.ipynb
nn/Model/: model.py
nn/PNL/AED/: aed.ipynb
nn/PNL/model/: a.py  analyze_coverage.py  attention.py  beam_search.py  constant.py  dataset.py  decoder.py  encoder.py  finetune.py  finetune_keras.py  generate.py  load_model.py  model.py  new_model.py  notebooke8044196e4-2.ipynb  optimizer.py  pgn_model.py  preprocess_data.py  test.py  train.py  vocabulary.py
nn/data/scripts_download/: download.py
nn/fire_predict/: notebook54024a6920.ipynb
nn/fire_predict/AED/: AED.ipynb
nn/fire_predict/Model/: CNN.py  LSTM.py  config.py  constants.py  count_params.py  dataset.py  eval_test.py  model.py  test.py  test_dataset.py  test_synthetic.py  train.py  utils.py
