[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "es-core-news-sm",
    "ipykernel>=6.25.0,<6.27.0",
    "ipython>=8.12.0,<8.18.0",
    "jupyter-client>=8.4.0",
    "jupyter-core>=5.3.0",
    "jupyterlab>=4.5.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pandas>=2.1.0",
    "rasterio>=1.4.3",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "tensorboard>=2.13.0",
    "tensorflow==2.13.0",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "typing-extensions>=3.6.6,<4.6.0",
]

[tool.uv.sources]
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
